# Alpha-auto-posting-

./: .gitignore  .replit  README.md  pyproject.toml  render.yaml  replit.md
attached_assets/: Pasted-Look-https-chatgpt-com-s-t-69c882c0563c8191adc8ea60a09e_1774784047913.txt  Pasted-Running-cd-bot-python-bot-py-2026-03-29-16-51-41-090-IN_1774803498200.txt  Pasted-Running-cd-bot-python-bot-py-Matplotlib-is-building-the_1774902036672.txt
bot/: .env.example  bot.py  chart_generator.py  dex_fetcher.py  image_generator.py  render.yaml
